# face-blur-onpremise

./: .gitignore  CMakeLists.txt  LICENSE  README.md
FaceBlurApp/: App.xaml  App.xaml.cs  FaceBlurApp.csproj  FaceBlurEngine.cs  MainWindow.xaml  MainWindow.xaml.cs
src/: DnnFaceDetector.cpp  DnnFaceDetector.h  FaceAnonymizer.cpp  FaceAnonymizer.h  FaceBlurApi.cpp  FaceBlurApi.h  HaarFaceDetector.cpp  HaarFaceDetector.h  IFaceDetector.h  main.cpp
tests/: smoke_test.cpp
